# libmmap

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  meson.build  mmap.c  mmap.h  tree.c  tree.h
src/: addr_space.h  avl.c  mmap.c  mmap.cpp  mmap.h  mmap_c.cpp  mmap_c.h  mmap_internal.h  range_map.h
test/: addr_space_test.cpp  avl_test.c  meson.build  mmap_test.c  range_map_test.cpp  test.h  test1.c  test2.c  test3.c  test4.c  test5.c
test/fuzz/: fuzz_mmap.c  fuzz_mmap.cpp  meson.build  ref_mmap.c  ref_mmap.h
